# snakepack

./: .gitignore  .gitmodules  LICENSE.txt  README.md  conftest.py  pyproject.toml  snakepack.yml
docs/: cli.md  index.md  quickstart.md
snakepack/: __main__.py  app.py  compiler.py
snakepack/analyzers/: __init__.py  _base.py
snakepack/analyzers/python/: __init__.py  _base.py  imports.py  literals.py  scope.py
snakepack/assets/: __init__.py  _base.py  generic.py  python.py
snakepack/bundlers/: __init__.py  _base.py  generic.py
snakepack/config/: __init__.py  _base.py  formats.py  model.py  options.py  parsing.py  types.py
snakepack/loaders/: __init__.py  _base.py  generic.py  python.py
snakepack/packagers/: __init__.py  _base.py  generic.py
snakepack/transformers/: __init__.py  _base.py
snakepack/transformers/python/: __init__.py  _base.py  _renaming.py  hoist_literals.py  remove_annotations.py  remove_assertions.py  remove_comments.py  remove_literal_statements.py  remove_object_base.py  remove_parameter_separators.py  remove_pass.py  remove_semicolons.py  remove_unreferenced_code.py  remove_whitespace.py  rename_identifiers.py
tests/acceptance/: _base.py  results_all.csv  test_django.py  test_fastapi.py  test_pydantic.py  test_requests.py  test_snakepack.py  test_sqlalchemy.py
tests/integration/analyses/python/: test_literals.py  test_scope.py
tests/integration/analyzers/python/: test_literals.py  test_scope.py
tests/integration/config/: test_formats.py  test_parsing.py
tests/integration/loaders/: test_python.py
tests/integration/transformers/: _base.py
tests/integration/transformers/python/: _base.py  test_base.py  test_hoist_literals.py  test_remove_annotations.py  test_remove_assertions.py  test_remove_comments.py  test_remove_literal_statements.py  test_remove_object_base.py  test_remove_parameter_separators.py  test_remove_pass.py  test_remove_semicolons.py  test_remove_unreferenced_code.py  test_remove_whitespace.py  test_rename_identifiers.py
tests/unit/analyzers/python/: test_imports.py
tests/unit/assets/: test_base.py  test_generic.py  test_python.py
tests/unit/bundlers/: test_base.py  test_generic.py
tests/unit/config/: test_base.py  test_formats.py  test_model.py  test_parsing.py  test_types.py
tests/unit/loaders/: test_base.py  test_python.py
tests/unit/packagers/: test_base.py  test_generic.py
tests/unit/transformers/: test_base.py
tests/unit/transformers/python/: test_remove_comments.py  test_renaming.py
