[tool.poetry]
name = "snakepack"
version = "0.1.0"
description = ""
authors = ["Jochen Van de Velde <mail@jochenvandevelde.be>"]

[tool.poetry.dependencies]
python = "^3.9"
libcst = "^0.3.21"
boltons = "^21.0.0"
pydantic = "^1.8.2"
PyYAML = "^6.0"
click = "^8.0.3"
modulegraph = "^0.19.2"
cloudpickle = "^2.0.0"
loky = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-xdist = "^2.3.0"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.12.1"
pytest-randomly = "^3.10.1"
pytest-mock = "^3.6.1"
pyfakefs = "^4.5.1"
pytest-click = "^1.0.2"
hypothesis = "^6.24.0"
hypothesmith = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_classes = '*Test'
