[tool.poetry]
name = "snakepack"
version = "0.1.0"
description = ""
authors = ["Jochen Van de Velde <mail@jochenvandevelde.be>"]

[tool.poetry.dependencies]
python = ">=3.8, <=3.10"
libcst = "^0.3.21"
boltons = "^21.0.0"
pydantic = "^1.8.2"
PyYAML = "^6.0"
click = "^8.0.3"
modulegraph = "^0.19.2"
cloudpickle = "^2.0.0"
loky = "^3.0.0"
stdlib-list = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-xdist = "^2.3.0"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.12.1"
pytest-randomly = "^3.10.1"
pytest-mock = "^3.6.1"
pyfakefs = "^4.5.1"
pytest-click = "^1.0.2"
hypothesis = "^6.24.0"
hypothesmith = "^0.1.9"
tox = "^3.24.4"
tox-pyenv = "^1.1.0"
tox-poetry-dev-dependencies = "^0.0.9"
pytest-harvest = "^1.10.3"
pandas = "^1.3.5"
setuptools = "=58.3.1"
pytest-venv = "^0.2.1"

[tool.poetry.scripts]
snakepack = "snakepack.app:snakepack"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_classes = '*Test'
norecursedirs = 'tests/acceptance/subjects/*'
addopts = '-m "not hypothesis"'

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38,py39

[testenv]
poetry_experimental_add_locked_dependencies = True
poetry_add_dev_dependencies = True
commands =
    pytest -k "not IntegrationTest and not AcceptanceTest"
    pytest -k "IntegrationTest" -m "not hypothesis"
    pytest -n auto -k "AcceptanceTest"
"""